-------------------------------------------------------------------------------
Changes in version 1.009

- Rewrite the SHA-256 and SHA-512 algorithms to make them work on both
  64-bit and MSB platforms, and added the SHA-384 algorithm.

- Fixed iobuf/iobuf_init.c for systems that lack anonymous mmap.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.008

- Added queue and stack ADT's.

- Added globbing function to the str library.

- Changed str_match functions to add case insensitivity.

- Added "function" options, and option separators to the CLI library, as
  well as enhancing the string list type.

- More portability fixes.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.007

- Fixed bug in iobuf/iobuf_init.c -- parameters to mmap happened to work
  on Linux but were completely bogus for portability.

- Switched the 64-bit CRC function to use the polynomial specified in
  the DLT1 spec (ECMA-182).

- Added (count 'em) three 16-bit CRC functions -- ARC, CCITT, and XMODEM.

- Added generic number output routines to iobuf, and generic number
  appending routines to str.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.006

- Added uint16, uint32, and uint64 pack/unpack functions.

- Added 32 and 64 bit CRC functions, and the Mersenne Twister random
  number generator.

- Changed the ipv4addr typedef to make explicit when it's being passed
  by reference.  This breaks source code compatibility with previous
  versions.
